--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
         "@material-ui/core": "^4.11.0",
         "@material-ui/lab": "^4.0.0-alpha.56",
         "axios": "^0.21.1",
+        "bizcharts": "^4.1.15",
         "chokidar": "^3.5.1",
         "dom7": "^2.1.5",
         "firebase": "^9.6.1",
+        "formik": "^2.2.9",
         "framework7": "^5.7.12",
         "framework7-react": "^5.7.12",
         "html-to-react": "^1.4.3",
@@ -45,11 +47,14 @@
         "react-dom": "^16.13.1",
         "react-html-parser": "^2.0.2",
         "react-icons": "^4.1.0",
+        "react-iframe-comm": "^1.2.2",
         "react-image-file-resizer": "^0.4.7",
         "react-infinite-scroll-component": "^6.1.0",
         "react-loading-skeleton": "^2.1.1",
         "react-mobile-datepicker": "^4.0.2",
         "react-number-format": "^4.8.0",
+        "react-select": "^5.3.2",
+        "react-select-async-paginate": "^0.6.1",
         "react-slick": "^0.27.11",
         "react-toastify": "^6.0.9",
         "sass": "^1.49.7",
